# apache_module

./: .gitignore  CMakeLists.txt  README.md
CMakeTools/: findApache.cmake
include/: wrapper.h
mods-available/: dimkush.conf  dimkush.load  json_module.conf  json_module.load
src/: dimkush.cpp  json_sample_module.c  sample_module.cpp  wrapper.cpp
